--- a/assets/translations/id-ID.json
+++ b/assets/translations/id-ID.json
@@ -7,5 +7,10 @@
     "PURPLE": "ungu anggur",
     "PINK": "Merah jambu manis"
   },
-  "TR_EMPTY_STATE": "Kamu belum membuat catatan apa pun di sini, ayo buat.."
+  "TR_EMPTY_STATE": "Kamu belum membuat catatan apa pun di sini, ayo buat..",
+  "TR_NOTE": "Catatan",
+  "TR_CREATE_NOTE": "Buat catatan",
+  "TR_EDIT_NOTE": "Ubah catatan",
+  "TR_TITLE": "Judul",
+  "TR_DESCRIPTION": "Deskripsi"
 }
