refactor for modularization

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -1,4 +1,6 @@
 {
+  "en_US": "English US",
+  "id_ID": "Indonesia",
   "TR_LANGUAGE": "Language",
   "TR_SETTINGS": "Settings",
   "TR_COLOR_SCHEME": {
