--- a/assets/translations/id-ID.json
+++ b/assets/translations/id-ID.json
@@ -1,4 +1,6 @@
 {
+  "en_US": "Inggris US",
+  "id_ID": "Indonesia",
   "TR_LANGUAGE": "Bahasa",
   "TR_SETTINGS": "Pengaturan",
   "TR_COLOR_SCHEME": {
